--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,6 +71,7 @@ services:
       - airflow-webserver
     environment:
       AIRFLOW__CORE__SECRET_KEY: "3XHYF2ThlHV63zcCL6FoOzklKdxjkxQcRTJuHr0w634="
+      AIRFLOW__CORE__FERNET_KEY: "3XHYF2ThlHV63zcCL6FoOzklKdxjkxQcRTJuHr0w634=" # Replace with a generated key      
       AIRFLOW__CORE__EXECUTOR: "LocalExecutor"
       AIRFLOW__CORE__SQL_ALCHEMY_CONN: "postgresql+psycopg2://airflow:airflow@airflow-db/airflow"
     volumes:
