--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,7 @@ services:
       GUNICORN_CMD_ARGS: "--timeout 300"
     volumes:
       - ./dags:/opt/airflow/dags
+      - ./logs:/opt/airflow/logs/scheduler
     ports:
       - "8080:8080"
     command: "webserver"
@@ -75,6 +76,7 @@ services:
       AIRFLOW__CORE__SQL_ALCHEMY_CONN: "postgresql+psycopg2://airflow:airflow@airflow-db/airflow"
     volumes:
       - ./dags:/opt/airflow/dags
+      - ./logs:/opt/airflow/logs/scheduler
     command: "scheduler"
 
   # Metabase Service
