--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,7 @@ services:
       GUNICORN_CMD_ARGS: "--timeout 300"
     volumes:
       - ./dags:/opt/airflow/dags
+      - ./logs:/opt/airflow/logs
     ports:
       - "8080:8080"
     command: "webserver"
