--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
 version: '3.9'
 
+
+x-airflow-common: &airflow-common
+  environment:
+    AIRFLOW__CORE__EXECUTOR: "LocalExecutor"
+    AIRFLOW__CORE__SQL_ALCHEMY_CONN: "postgresql+psycopg2://airflow:airflow@airflow-db/airflow"
+  volumes:
+    - ./dags:/opt/airflow/dags
+    - ./logs:/opt/airflow/logs
+
 services:
   # PostgreSQL Database Service
   warehouse_db:
@@ -43,13 +52,12 @@ services:
 
   # Airflow Webserver Service
   airflow-webserver:
+    <<: *airflow-common
     image: apache/airflow:2.7.0
     depends_on:
       - airflow-init
       - redis
     environment:
-      AIRFLOW__CORE__EXECUTOR: "LocalExecutor"
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: "postgresql+psycopg2://airflow:airflow@airflow-db/airflow"
       AIRFLOW__WEBSERVER__EXPOSE_CONFIG: "True"
       AIRFLOW__CORE__FERNET_KEY: "3XHYF2ThlHV63zcCL6FoOzklKdxjkxQcRTJuHr0w634=" # Replace with a generated key
       AIRFLOW__WEBSERVER__SECRET_KEY: "3XHYF2ThlHV63zcCL6FoOzklKdxjkxQcRTJuHr0w634=" # Replace with a generated key
@@ -57,24 +65,18 @@ services:
       _AIRFLOW_WWW_USER_USERNAME: "admin"  # Nom d'utilisateur
       _AIRFLOW_WWW_USER_PASSWORD: "admin"  # Mot de passe
       GUNICORN_CMD_ARGS: "--timeout 300"
-    volumes:
-      - ./dags:/opt/airflow/dags
-      - ./logs:/opt/airflow/logs
+
     ports:
       - "8080:8080"
     command: "webserver"
 
   # Airflow Scheduler Service
   airflow-scheduler:
+    <<: *airflow-common
     image: apache/airflow:2.7.0
     depends_on:
       - airflow-init
       - airflow-webserver
-    environment:
-      AIRFLOW__CORE__EXECUTOR: "LocalExecutor"
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: "postgresql+psycopg2://airflow:airflow@airflow-db/airflow"
-    volumes:
-      - ./dags:/opt/airflow/dags
     command: "scheduler"
 
   # Metabase Service
