--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,5 @@
 version: '3.9'
 
-
-x-airflow-common: &airflow-common
-  environment:
-    AIRFLOW__CORE__EXECUTOR: "LocalExecutor"
-    AIRFLOW__CORE__SQL_ALCHEMY_CONN: "postgresql+psycopg2://airflow:airflow@airflow-db/airflow"
-  volumes:
-    - ./dags:/opt/airflow/dags
-    - ./logs:/opt/airflow/logs
-
 services:
   # PostgreSQL Database Service
   warehouse_db:
@@ -47,36 +38,45 @@ services:
     depends_on:
       - airflow-db
     environment:
+      AIRFLOW__CORE__FERNET_KEY: ${AIRFLOW_SECRET_KEY} 
       AIRFLOW__CORE__SQL_ALCHEMY_CONN: "postgresql+psycopg2://airflow:airflow@airflow-db/airflow"
     command: "airflow db init"
 
   # Airflow Webserver Service
   airflow-webserver:
-    <<: *airflow-common
     image: apache/airflow:2.7.0
     depends_on:
       - airflow-init
       - redis
     environment:
+      AIRFLOW__CORE__EXECUTOR: "LocalExecutor"
+      AIRFLOW__CORE__SQL_ALCHEMY_CONN: "postgresql+psycopg2://airflow:airflow@airflow-db/airflow"
       AIRFLOW__WEBSERVER__EXPOSE_CONFIG: "True"
-      AIRFLOW__CORE__FERNET_KEY: "3XHYF2ThlHV63zcCL6FoOzklKdxjkxQcRTJuHr0w634=" # Replace with a generated key
-      AIRFLOW__WEBSERVER__SECRET_KEY: "3XHYF2ThlHV63zcCL6FoOzklKdxjkxQcRTJuHr0w634=" # Replace with a generated key
-      AIRFLOW__WEBSERVER__SECRET_KEY_CMD: "3XHYF2ThlHV63zcCL6FoOzklKdxjkxQcRTJuHr0w634"
+      AIRFLOW__CORE__FERNET_KEY: ${AIRFLOW_SECRET_KEY}
+ # Replace with a generated key
       _AIRFLOW_WWW_USER_USERNAME: "admin"  # Nom d'utilisateur
       _AIRFLOW_WWW_USER_PASSWORD: "admin"  # Mot de passe
       GUNICORN_CMD_ARGS: "--timeout 300"
-
+    volumes:
+      - ./dags:/opt/airflow/dags
+      - airflow-logs:/opt/airflow/logs 
     ports:
       - "8080:8080"
     command: "webserver"
 
   # Airflow Scheduler Service
   airflow-scheduler:
-    <<: *airflow-common
     image: apache/airflow:2.7.0
     depends_on:
       - airflow-init
       - airflow-webserver
+    environment:
+      AIRFLOW__CORE__FERNET_KEY: ${AIRFLOW_SECRET_KEY}
+      AIRFLOW__CORE__EXECUTOR: "LocalExecutor"
+      AIRFLOW__CORE__SQL_ALCHEMY_CONN: "postgresql+psycopg2://airflow:airflow@airflow-db/airflow"
+    volumes:
+      - ./dags:/opt/airflow/dags
+      - airflow-logs:/opt/airflow/logs
     command: "scheduler"
 
   # Metabase Service
@@ -94,3 +94,5 @@ volumes:
   postgres-volume:
   airflow_db_data:
   urandom:
+  airflow-logs:
+    driver: local
